WIP: fixed image links

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
           <div class="project-img-container">
             <img
-              src="file:///Users/chrisjones/Documents/git/portfolio-website/images/UI-III-Flexbox-screenshot.png"
+              src="img/UI-III-Flexbox-screenshot.png"
               alt="screenshot of website"
             />
           </div>
@@ -130,7 +130,7 @@
           </div>
           <div class="project-img-container">
             <img
-              src="file:///Users/chrisjones/Documents/git/portfolio-website/images/responsive-web-design-I-screenshot-resized.png"
+              src="img/responsive-web-design-I-screenshot-resized.png"
               alt="screenshot of website"
             />
           </div>
@@ -151,7 +151,7 @@
           </div>
           <div class="project-img-container">
             <img
-              src="file:///Users/chrisjones/Documents/git/portfolio-website/images/UI-III-Flexbox-screenshot.png"
+              src="img/responsive-web-design-I-screenshot-resized.png"
               alt="screenshot of website"
             />
           </div>
