WIP: styling changes

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <header class="h-nav-toolbar">
       <h1></h1>
       <nav class="h-nav-links">
-        <a href="index.html">About</a>
-        <a href="#">Projects</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
         <a href="blog.html">Blog</a>
-        <a href="#">Contact</a>
       </nav>
       <nav class="h-social-links">
         <a href="http://www.linkedin.com" target="_blank">LinkedIn</a>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="about-container">
-        <h2>About</h2>
+        <a name="about"><h2>About</h2>
         <p>
           I've always been passionate about coding, but my schedule as a
           solopreneur made it really diificult to find the time to work on my
@@ -90,7 +90,7 @@
         </p>
       </div>
       <div class="all-projects-container">
-        <h2>Projects</h2>
+          <a name="projects"><h2>Projects</h2>
         <p>
           Here are some things I've been working on recently:
         </p>
@@ -158,15 +158,15 @@
         </div>
         <div class="contact-container">
           <div class="contact-left">
-            <h2>Contact</h2>
+            <a name="contact"><h2>Contact</h2>
             <p>Phone: 07979645741</p>
             <p>Email: hello@chris-jones.dev</p>
             <a href="https://www.linkedin.com/" target="_blank"
-              ><p>LinkedIn</p></a
+              ><p class="social-link">LinkedIn</p></a
             >
-            <a href="https://www.github.com/" target="_blank"><p>GitHub</p></a>
+            <a href="https://www.github.com/" target="_blank"><p class="social-link">GitHub</p></a>
             <a href="https://www.twitter.com/" target="_blank"
-              ><p>Twitter</p></a
+              ><p class="social-link">Twitter</p></a
             >
           </div>
           <div class="contact-right">
