--- a/index.html
+++ b/index.html
@@ -191,5 +191,8 @@
         </div>
       </div>
     </main>
+    <footer>
+      <p>Copyright 2019 - Chris Jones</p>
+    </footer>
   </body>
 </html>
