--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="af-left-cont-upper-lower">
-            <p>Full-stack developer based in Oxford.</p>
+            <p>An Full-stack developer based in Oxford.</p>
           </div>
         </div>
         <div class="af-right-cont">
@@ -158,7 +158,7 @@
         </div>
         <div class="contact-container">
           <div class="contact-left">
-            <a name="contact"><h2>Contact</h2>
+            <a name="contact"><h2 class="contact-subtitle">Contact</h2>
             <p>Phone: 07979645741</p>
             <p>Email: hello@chris-jones.dev</p>
             <a href="https://www.linkedin.com/" target="_blank"
