WIP: styling changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="af-left-cont-upper-lower">
-            <p>An Full-stack developer based in Oxford.</p>
+            <p>A Full-stack developer based in Oxford.</p>
           </div>
         </div>
         <div class="af-right-cont">
