WIP: styling changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           developer full time with Lambda School, it was an easy transition. I'm
           used to long hours, solving problems on my own, pushing through
           challenges, and seeing tasks through to their completion from start to
-          finish. Coming from an ecommerce background, I have extensive
+          finish. Coming from an e-commerce background, I have extensive
           experience in turning ideas into products and bringing them to market.
         </p>
       </div>
