WIP: styling changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a name="about"><h2>About</h2>
         <p>
           I've always been passionate about coding, but my schedule as a
-          solopreneur made it really diificult to find the time to work on my
+          solopreneur made it really difficult to find the time to work on my
           programming skills. When I finally commited to learning to become a
           developer full time with Lambda School, it was an easy transition. I'm
           used to long hours, solving problems on my own, pushing through
