--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p>
           I've always been passionate about coding, but my schedule as a
           solopreneur made it really difficult to find the time to work on my
-          programming skills. When I finally commited to learning to become a
+          programming skills. When I finally committed to learning to become a
           developer full-time with Lambda School, it was an easy transition. I'm
           used to long hours, solving problems on my own, pushing through
           challenges, and seeing tasks through to their completion from start to
