--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           used to long hours, solving problems on my own, pushing through
           challenges, and seeing tasks through to their completion from start to
           finish. Coming from an e-commerce background, I have extensive
-          experience in turning ideas into products and bringing them to market.
+          experience in transforming ideas into products and bringing them to market.
         </p>
       </div>
       <div class="all-projects-container">
