--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="index.js" defer></script>
-    <title>Chris Jones Personal Portfolio</title>
+    <title>Chris Jones Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap"
       rel="stylesheet"
