--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <a href="blog.html">Blog</a>
       </nav>
       <nav class="h-social-links">
-        <a href="http://www.linkedin.com" target="_blank">LinkedIn</a>
-        <a href="http://www.github.com" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/chris-ian-jones/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/chris-ian-jones" target="_blank">GitHub</a>
         <a href="http://www.twitter.com" target="_blank">Twitter</a>
       </nav>
     </header>
@@ -163,10 +163,10 @@
             <a name="contact"><h2 class="contact-subtitle">Contact</h2>
             <p>Phone: 07979645741</p>
             <p>Email: hello@chris-jones.dev</p>
-            <a href="https://www.linkedin.com/" target="_blank"
+            <a href="https://www.linkedin.com/in/chris-ian-jones/" target="_blank"
               ><p class="social-link">LinkedIn</p></a
             >
-            <a href="https://www.github.com/" target="_blank"><p class="social-link">GitHub</p></a>
+            <a href="https://github.com/chris-ian-jones" target="_blank"><p class="social-link">GitHub</p></a>
             <a href="https://www.twitter.com/" target="_blank"
               ><p class="social-link">Twitter</p></a
             >
