--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </p>
       </div>
       <div class="all-projects-container">
-          <a name="projects"><h2>Projects</h2>
-        <p>
+          <a name="projects"><h2 class="projects-subtitle">Projects</h2>
+        <p class="projects-tagline">
           Here are some things I've been working on recently:
         </p>
         <div class="project-container">
@@ -126,8 +126,8 @@
             </p>
             <p class="languages">HTML CSS LESS Javascript</p>
             <div class="button-container">
-              <button>Website</button>
               <button>Code</button>
+              <button>Website</button>
             </div>
           </div>
           <div class="project-img-container">
@@ -139,21 +139,19 @@
         </div>
         <div class="project-container">
           <div class="project-text-container">
-            <h2>Great Idea Web Page</h2>
+            <h2>Todo App built in React</h2>
             <p>
-              After being given a design file, I had to use HTML and CSS to
-              build the web page only using display:inline-block and box model
-              CSS properties.
+              A simple react application demonstrating the use of a stateful class component. Hosted on Netlify, styled with Semantic UI & styled-components.
             </p>
-            <p class="languages">HTML CSS LESS Javascript</p>
+            <p class="languages">React</p>
             <div class="button-container">
-              <button>Website</button>
-              <button>Code</button>
+              <button onclick="window.open('https://kind-clarke-b1d8d6.netlify.com/','_blank')">Website</button>
+              <button onclick="window.open('https://github.com/chris-ian-jones/React-Todo','_blank')">Code</button>
             </div>
           </div>
           <div class="project-img-container">
             <img
-              src="img/responsive-web-design-I-screenshot-resized.png"
+              src="img/to-do-app.jpg"
               alt="screenshot of website"
             />
           </div>
