--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
-        <a href="blog.html">Blog</a>
+        <!-- <a href="blog.html">Blog</a> -->
       </nav>
       <nav class="h-social-links">
         <a href="https://www.linkedin.com/in/chris-ian-jones/" target="_blank">LinkedIn</a>
