WIP: added project to projects section

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <div class="project-text-container">
             <h2>Zoopstagram</h2>
             <p>
-              This was an app built in react, to grab data from the Zoopla api, then render it in a tiled card format. 
-              Built using the latest react hooks.
+              This was an app built in React, to grab data from the Zoopla api, then render it in a tiled card format. 
+              Built using the latest React hooks.
             </p>
             <p class="languages">React</p>
             <div class="button-container">
@@ -112,6 +112,25 @@
           <div class="project-img-container">
             <img
               src="img/zoopstagram-screenshot-sized.png"
+              alt="screenshot of website"
+            />
+          </div>
+        </div>
+        <div class="project-container">
+          <div class="project-text-container">
+            <h2>Dad Jokes Generator</h2>
+            <p>
+              This was an app built in React with Redux, utilizing asyncronous action creators.
+            </p>
+            <p class="languages">React, Redux</p>
+            <div class="button-container">
+              <button onclick="window.open('https://dad-jokes-generator.netlify.com','_blank')">Website</button>
+              <button onclick="window.open('https://github.com/chris-ian-jones/React-Redux-App')">Code</button>
+            </div>
+          </div>
+          <div class="project-img-container">
+            <img
+              src="img/dad-jokes-screenshot-web.png"
               alt="screenshot of website"
             />
           </div>
