WIP: optimized images for web

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
           <div class="project-img-container">
             <img
-              src="img/to-do-app.jpg"
+              src="img/to-do-app.png"
               alt="screenshot of website"
             />
           </div>
