WIP: fixed typo

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="project-text-container">
             <h2>Dad Jokes Generator</h2>
             <p>
-              This was an app built in React with Redux, utilizing asyncronous action creators.
+              This was an app built in React with Redux, utilizing asynchronous action creators.
             </p>
             <p class="languages">React, Redux</p>
             <div class="button-container">
