--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="project-text-container">
             <h2 class="project-title">Telford Leisure Services</h2>
             <p class="project-body">
-              This started off as a challenge to redesign the Telford & Wrekin Leisure Service's member account sign up process <a class="link" href="https://secureleisure.telford.gov.uk/lfbook.asp?wci=Login&=" target="_blank">(view link)</a> using the Gov Design Systems styles, components and patterns to make it more consistent with GOV.UK. I then built out the designs and deployed the full stack app.
+              This started off as a challenge to redesign the Telford & Wrekin Leisure Service's sign up process <a class="link" href="https://secureleisure.telford.gov.uk/lfbook.asp?wci=Login&=" target="_blank">(view link)</a> using the Gov Design Systems styles, components and patterns to make it more consistent with GOV.UK. I then built out the designs and deployed the full stack app.
             </p>
             <p class="languages">Angular, Nest.js, Express, Node, Mongo, SCSS, GDS, Figma, Heroku, Vercel</p>
             <div class="button-container">
@@ -197,7 +197,7 @@
       </div>
     </main>
     <footer>
-      <p>Copyright 2019 - Chris Jones</p>
+      <p>Copyright 2022 - Chris Jones</p>
     </footer>
   </body>
 </html>
