--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
             <a name="contact" >
             <h2 class="contact-subtitle">Expanding your team?</h2>
             <h2 class="contact-subtitle">Let me know!</h2>
-            <p>Phone: 07480058798</p>
-            <p>Email: hello@chris-jones.dev</p>
+            <p>hello@chris-jones.dev</p>
             <a href="https://www.linkedin.com/in/chris-ian-jones/" target="_blank">
               <p class="social-link">LinkedIn</p>
             </a>
