Updated screenshot of rebate deals

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <div class="project-img-container">
             <img
-              src="img/rebate-deals.png"
+              src="img/rebate-deals-screenshot.png"
               alt="screenshot of website"
             />
           </div>
