added CV to contact section of main page

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
             <a href="https://github.com/chris-ian-jones" target="_blank">
               <p class="social-link">GitHub</p>
             </a>
+            <a href="./img/Chris_Jones_CV.pdf" target="_blank">
+              <p class="social-link">CV</p>
+            </a>
           </div>
           <div class="contact-right">
             <form name="contact" method="POST" data-netlify="true">
