--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
               This started off as a challenge to redesign the Telford & Wrekin Leisure Service's sign up process <a class="link" href="https://secureleisure.telford.gov.uk/lfbook.asp?wci=Login&=" target="_blank">(view link)</a> using the Gov Design Systems styles, components and patterns to make it more consistent with GOV.UK. I then built out the designs and deployed the full stack app.
             </p>
             <p class="languages">Angular, Nest.js, Express, Node, Mongo, SCSS, GDS, Figma, Heroku, Vercel</p>
+            <p class="project-disclaimer">
+              * Please note: the backend is hosted with Heroku under their free plan and after a period of 30 minutes of inactivity the dyno will sleep. If receiving traffic while asleep, it will take around 30 seconds for it to become active again.
+            </p>
             <div class="button-container">
               <button onclick="window.open('https://telford-leisure-services-front.vercel.app','_blank')">Website</button>
               <button onclick="window.open('https://www.figma.com/file/XnDJNj77ZnkZUftF5giXqe/telford-leisure-services?node-id=0%3A1')">Design file (figma)</button>
@@ -127,7 +130,7 @@
             />
           </div>
         </div>
-        <div class="project-container">
+        <!-- <div class="project-container">
           <div class="project-text-container">
             <h2 class="project-title">Dad Jokes Generator</h2>
             <p class="project-body">
@@ -145,7 +148,7 @@
               alt="screenshot of website"
             />
           </div>
-        </div>
+        </div> -->
         <div class="project-container">
           <div class="project-text-container">
             <h2 class="project-title">Todo App</h2>
