--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <nav class="h-social-links">
         <a href="https://www.linkedin.com/in/chris-ian-jones/" target="_blank">LinkedIn</a>
         <a href="https://github.com/chris-ian-jones" target="_blank">GitHub</a>
+        <a href="./img/Chris_Jones_CV.pdf" target="_blank">CV</a>
       </nav>
     </header>
     <main>
