--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav class="h-social-links">
         <a href="https://www.linkedin.com/in/chris-ian-jones/" target="_blank">LinkedIn</a>
         <a href="https://github.com/chris-ian-jones" target="_blank">GitHub</a>
-        <a href="./img/Chris_Jones_CV.pdf" target="_blank">CV</a>
+        <a href="./img/Chris_Jones_Resume.pdf" target="_blank">CV</a>
       </nav>
     </header>
     <main>
@@ -77,7 +77,7 @@
       <div class="about-container">
         <a name="about"><h2>About</h2>
         <p>
-          Full-stack developer based in Telford with 2 years professional experience as an Angular developer. I'm used to long hours, solving problems on my own, pushing through challenges, and seeing tasks through to their completion from start to finish. As a former e-commerce seller who has designed physical products, I have extensive experience in transforming ideas into designs, creating products from those designs and then bringing them to market.
+          Full-stack developer based in Telford with 2+ years experience in enterprise level front-end web development. I'm used to long hours, solving problems on my own, pushing through challenges, and seeing tasks through to their completion from start to finish. As a former e-commerce seller who has designed physical products, I have extensive experience in transforming ideas into designs, creating products from those designs and then bringing them to market.
         </p>
       </div>
       <div class="all-projects-container">
@@ -181,7 +181,7 @@
             <a href="https://github.com/chris-ian-jones" target="_blank">
               <p class="social-link">GitHub</p>
             </a>
-            <a href="./img/Chris_Jones_CV.pdf" target="_blank">
+            <a href="./img/Chris_Jones_Resume.pdf" target="_blank">
               <p class="social-link">CV</p>
             </a>
           </div>
