--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <div class="button-container">
               <button onclick="window.open('https://www.rebatedeals.co.uk/','_blank')">Website</button>
             </div>
+            <p class="project-body">
+              (Sign up as a seller and try the 'create a campaign' flow)
+            </p>
           </div>
           <div class="project-img-container">
             <img
