--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </p>
             <p class="languages">Angular, Nest.js, Express, Node, Mongo, SCSS, GDS, Figma, Heroku, Vercel</p>
             <p class="project-disclaimer">
-              * Please note: the backend is hosted with Heroku under their free plan and after a period of 30 minutes of inactivity the dyno will sleep. If receiving traffic while asleep, it will take around 30 seconds for it to become active again.
+              * Expect up to 30s delay on first request after 30m inactivity (Heroku free plan). *
             </p>
             <div class="button-container">
               <button onclick="window.open('https://telford-leisure-services-front.vercel.app','_blank')">Website</button>
@@ -119,12 +119,12 @@
               This was a two sided marketplace app built in Angular with Tailwind.css and Nest.js to allow Amazon sellers to offer cash back rebates to their customers. This platform allows buyers/sellers to create accounts, sellers to create rebate listings, sellers to manage rebate statuses, buyers/sellers to handle rebate disputes, buyers/sellers to message each other, schedule payouts to buyers, and an admin portal among other features. This project is closed source.
             </p>
             <p class="languages">Angular, Tailwind.css, Nest.js, Express, Node, Mongo, Stripe, Twilio, Amazon S3, Sendinblue, Heroku, Vercel</p>
+            <p class="project-disclaimer">
+              * Sign up as a seller and try the 'create a campaign' flow *
+            </p>
             <div class="button-container">
               <button onclick="window.open('https://www.rebatedeals.co.uk/','_blank')">Website</button>
             </div>
-            <p class="project-body">
-              (Sign up as a seller and try the 'create a campaign' flow)
-            </p>
           </div>
           <div class="project-img-container">
             <img
