--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </p>
             <p class="languages">Angular, Nest.js, Express, Node, Mongo, SCSS, GDS, Figma, Heroku, Vercel</p>
             <p class="project-disclaimer">
-              * Expect up to 30s delay on first request after 30m inactivity (Heroku free plan). *
+              * Expect up to 30s delay on first request after 30m inactivity (Heroku free plan) *
             </p>
             <div class="button-container">
               <button onclick="window.open('https://telford-leisure-services-front.vercel.app','_blank')">Website</button>
