--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p class="project-body">
               This started off as a challenge to redesign the Telford & Wrekin Leisure Service's sign up process <a class="link" href="https://web.archive.org/web/20210420141837/https://secureleisure.telford.gov.uk/lfbook.asp?wci=Login&=" target="_blank">(view link)</a> using the Gov Design Systems styles, components and patterns to make it more consistent with GOV.UK. I then built out the designs and deployed the full stack app.
             </p>
-            <p class="languages">Angular, Nest.js, Express, Node, Mongo, SCSS, GDS, Figma, Heroku, Vercel</p>
+            <p class="languages">Angular (v19), Nest.js, Express, Node, Mongo, SCSS, GDS, Figma, Heroku, Vercel</p>
             <p class="project-disclaimer">
               * Expect up to 30s delay on first request after 30m inactivity (Heroku free plan) *
             </p>
