--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="about-container">
         <a name="about"><h2>About</h2>
         <p>
-          Dynamic Software Engineer with over 4 years of professional experience specialising in Angular-based single-page applications (SPAs) for enterprise-scale projects in GovTech and Telematics. Adept at delivering responsive, user-focused solutions using TypeScript, SASS, and the Angular ecosystem. Skilled in Agile/Scrum methodologies, Gov Design System compliance, and creating high-fidelity prototypes with Figma and Adobe XD. Passionate about clean code, usability, and innovative design.
+          Dynamic Software Engineer with over 4 years of professional experience specialising in complex Angular-based single-page applications (SPAs) for enterprise-scale projects in Telematics & GovTech. Adept at delivering responsive, user-focused solutions using TypeScript, SASS, and the Angular ecosystem. Skilled in Agile/Scrum methodologies, Gov Design System compliance, and creating wireframes and high-fidelity prototypes with Figma and Adobe XD. Passionate about clean code, usability, and innovative design.
         </p>
       </div>
       <div class="all-projects-container">
